# OpenGLWrapper

./: .gitattributes  .gitignore  .gitmodules  Build.sh  CMakeLists.txt  Reset2Master.sh  TODO.txt  Test.cpp  libopenglwrapper-v141.sln  libopenglwrapper.sln
cmake_modules/: FindGLEW.cmake  FindGLFW.cmake  Findfreeglut.cmake
libopenglwrapper/: CMakeLists.txt  CPP_FILES_LIST.txt  HEADER_FILES_LIST.txt  Makefile  libopenglwrapper.vcxproj  libopenglwrapper.vcxproj.filters
libopenglwrapper/basic_definitions/: default_triangle.json
libopenglwrapper/include/libopenglwrapper/: Camera.hpp  Cube.hpp  IBufferFactory.hpp  IDebugOverlay.hpp  IMovable.hpp  IObject.hpp  IObjectFactory.hpp  IOpenGLWrapper.hpp  IOpenGLWrapper.hpp.orig  IOpenGLWrapperApp.hpp  IProgram.cpp  IProgram.hpp  IProgram.hpp.orig  IProgramFactory.hpp  IRenderable.hpp  IShader.hpp  IShader.hpp.orig  IShaderFactory.hpp  ISprite.hpp  ITexture.hpp  ITextureFactory.hpp  ITransformable.hpp  IUtility.hpp  IUtilityUser.hpp  IVAO.hpp  IVBO.hpp  IVertexArray.hpp  IVertexBuffer.hpp  Import.hpp  IndexBuffer.hpp  Model.hpp  Program.hpp  ProjectionData.hpp  Shader.hpp  Sprite.hpp  VertexArray.hpp  VertexBuffer.hpp  ViewPort.hpp  Viewport.hpp
libopenglwrapper/include/libopenglwrapper/Primitives/: ILine.hpp  IPoint.hpp  IQuad.hpp  IRect.hpp  ITriangle.hpp  Rect.hpp  Triangle.hpp
libopenglwrapper/shaders/: fragmentShader.frag  simpleFrag.frag  simpleVertex.vert  vertexShader.vert
libopenglwrapper/src/: Camera.cpp  Cube.cpp  IMPORT_glew.hpp  IObject.cpp  IObjectFactory.cpp  IOpenGLWrapper.cpp  IOpenGLWrapperApp.cpp  IProgram.cpp  IShader.cpp  IShaderFactory.cpp  ITexture.cpp  ITransformable.cpp  IUtility.cpp  IUtilityUser.cpp  IVAO.cpp  IVBO.cpp  IVertexArray.cpp  IVertexBuffer.cpp  ImportFreeglut.hpp  ImportImgui.hpp  IndexBuffer.cpp  MatrixStack.hpp  Model.cpp  ObjLoader.cpp  ObjLoader.hpp  OpenGLShaderFactory.cpp  OpenGLShaderFactory.hpp  OpenGLShaderFactory.hpp.orig  OpenGLWrapperConcrete.cpp  OpenGLWrapperConcrete.cpp.orig  OpenGLWrapperConcrete.hpp  OpenGLWrapperConcrete.hpp.orig  OpenGL_3_Utils.cpp  OpenGL_3_Utils.cpp.orig  OpenGL_3_Utils.hpp  OpenGL_3_Utils.hpp.orig  Program.cpp  ProgramConcrete.cpp  ProgramConcrete.hpp  ProgramConcrete.hpp.orig  (+22 more)
libopenglwrapper/src/Primitives/: ITriangle.cpp  LineImpl.cpp  LineImpl.hpp  PointImpl.hpp  QuadImpl.cpp  QuadImpl.hpp  QuadImplLegacy.cpp  QuadImplLegacy.hpp  Rect.cpp  Triangle.cpp  TriangleImpl.cpp  TriangleImpl.hpp
libopenglwrapper/src/embedded_shaders/: camera.frag  camera.vert
libopenglwrapperPlaygroundApp/: CMakeLists.txt  Makefile  libopenglwrapperPlaygroundApp.vcxproj  libopenglwrapperPlaygroundApp.vcxproj.filters  main.cpp
libopenglwrapperTestApp/: Makefile  libopenglwrapperTestApp.vcxproj  libopenglwrapperTestApp.vcxproj.filters  main.cpp
media/: Config.txt
sample/playgroundApp/: main.cpp
sample/snake/: CMakeLists.txt  main.cpp
sample/snake/inc/: Game.hpp  Snake.hpp
sample/snake/src/: Game.cpp  Snake.cpp
